[metadata]
name=dubplate
version=0.1.0
description=A Python an immutable, dict-like structure for storing data
author=Paul Munday
author_email=paul@paulmunday.net
maintainer=GreenBuildingRegistry
maintainer_email=admin@greenbuildingregistry.com
license="LICENSE"
keywords= greenbuildingregistry, record, dict, immutable
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	frozendict>=1.2
[bdist_wheel]
universal = 1
